Update Hypertrack SDK to 6.3.0-rc.1. Disable incremental search for Add integration screen. Fix Sentry reporting logic. Fix Sentry user id. Disable logging user emails.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -221,6 +221,7 @@
     <string name="place_integration_search_hint">Enter company name</string>
     <string name="place_integration_empty_placeholder">No entities found</string>
     <string name="place_integration_submit_button">Add company</string>
+    <string name="place_integration_search">Search</string>
     <string name="place_integration_integration_type">Integration type</string>
 
     <string name="add_geotag">Add geotag</string>
