--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -260,6 +260,14 @@
     <string name="outage_open_dontkillmyapp">Click to open <b>Dontkillmyapp.com</b> for detailed instructions</string>
     <string name="outage_dontkillmyapp_hint">Select your device manufacturer and follow the instructions to whitelist the app</string>
 
+    <string name="error_account_suspended">Account suspended</string>
+    <string name="error_already_logged_in">You\'re already logged in</string>
+    <string name="error_login_already_in_progress">Login is already in progress</string>
+    <string name="error_deeplink_timeout">Deeplink check timed out</string>
+
+    <string name="app_message_logged_in">Logged in as: %s</string>
+    <string name="app_message_error_reported">The issue is reported. Thank you.</string>
+
     <string name="copied_to_clipboard">Copied to clipboard</string>
     <string name="geotag">Geotag</string>
     <string name="active">Active</string>
@@ -303,11 +311,6 @@
     <string name="map_is_not_ready_yet">Failed to perform action: Map is not loaded yet</string>
     <string name="dontkillmyapp_url">https://dontkillmyapp.com</string>
     <string name="today">Today</string>
-    <string name="account_suspended">Account suspended</string>
-    <string name="logged_in">Logged in as: %s</string>
-    <string name="already_logged_in">You\'re already logged in</string>
-    <string name="login_already_in_progress">Login is already in progress</string>
-
 
     <plurals name="time">
         <item quantity="one">time</item>
